syntax = "proto3";

option go_package = "github.com/suri312006/term2term/v2";

package t2t;

// import "google/protobuf/timestamp.proto"; //too cringe wouldnt work
import "user.proto";
import "conversation.proto";
import "google/protobuf/wrappers.proto";

message Msg {
  string id = 1;
  Convo convo = 2;
  User author = 3;
  User recipient = 4;
  string body = 5;
  uint64 unix_time = 6;
  bool isRead = 7;
}

message MsgList { repeated Msg messages = 1; }

service MsgService {
  rpc Send(SendMsgReq) returns (SendMsgRes);
  rpc Search(SearchMsgReq) returns (SearchMsgRes);
  // TODO: think about maybe a update / edit message
  rpc Delete(DeleteMsgReq) returns (DeleteMsgRes);
}

message SendMsgReq {
  Convo convo = 1;
  User author = 2;
  string body = 3;
  uint64 unix_time = 4;
}

message SendMsgRes { Msg sentMsg = 1; }

enum MsgSearchKindBy {
  Id = 0;
  Unread = 1;
  ConvoId = 2;
  AuthorId = 3;
}

message SearchMsgReq {
  MsgSearchKindBy kind = 1;
  string id = 2;
  bool unread = 3;
  string convoId = 4;
  string userId = 5;
}

message SearchMsgRes { MsgList results = 1; }

message DeleteMsgReq { Msg toDelete = 1; }
message DeleteMsgRes { google.protobuf.BoolValue success = 1; }
